feat: add optional aux container management
